@@ -514,6 +514,8 @@ const char *tags[] = {
 	"vifm-compare-views",
 	"vifm-configure",
 	"vifm-count",
+	"vifm-count-variable",
+	"vifm-count1-variable",
 	"vifm-cp",
 	"vifm-cpo-f",
 	"vifm-cpo-s",
@@ -722,6 +724,8 @@ const char *tags[] = {
 	"vifm-trash",
 	"vifm-u",
 	"vifm-v",
+	"vifm-v:count",
+	"vifm-v:count1",
 	"vifm-v:servername",
 	"vifm-v_:",
 	"vifm-v_CTRL-C",
